# myip-rs

./: .gitignore  Cargo.toml  README.md  build.sh
script/bsd/: myip  myip6  rc.conf.txt
src/: main.rs
